<?xml version="1.0" encoding="utf-8"?>
<!--修改密码-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <include layout="@layout/toobar_item" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp0"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/old_pass"
        android:textSize="@dimen/sp18"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="@dimen/dp25"
        android:layout_marginRight="@dimen/dp25"
        android:gravity="center_vertical"
        android:hint="@string/string_hint_oldpass"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="12"
        android:theme="@style/MyEditText" />

    <EditText
        android:id="@+id/new_passs"
        android:textSize="@dimen/sp18"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="@dimen/dp25"
        android:layout_marginRight="@dimen/dp25"
        android:gravity="center_vertical"
        android:hint="@string/string_hint_newpass"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="12"
        android:theme="@style/MyEditText" />

    <EditText
        android:id="@+id/confirm_new_pass"
        android:textSize="@dimen/sp18"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="@dimen/dp25"
        android:layout_marginRight="@dimen/dp25"
        android:gravity="center_vertical"
        android:hint="@string/string_hint_newpass_ok"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="12"
        android:theme="@style/MyEditText" />


    <Button
        android:id="@+id/btn_change_pass"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="@dimen/dp25"
        android:layout_marginRight="@dimen/dp25"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_bg_orange_rounded_rectangle"
        android:text="@string/string_ok"
        android:textColor="@color/wirteColor"
        android:textSize="@dimen/sp18" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>